#
# Copyright (c) 2010 Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
#

include_HEADERS = \
        cci.h

include_ccidir = $(includedir)/cci
include_cci_HEADERS = \
        cci/public_config.h

noinst_HEADERS = \
        cci/private_config.h

EXTRA_DIST = \
	cci_lib_types.h \
	bsd/queue.h
