#
# Copyright (c) 2010 Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
#

noinst_LTLIBRARIES = libcci_api.la

libcci_api_la_SOURCES = \
        accept.c \
        arm_os_handle.c \
        connect.c \
        create_endpoint.c \
        destroy_endpoint.c \
        disconnect.c \
        free_devices.c \
        get_devices.c \
        get_event.c \
        get_opt.c \
        init.c \
        reject.c \
        return_event.c \
        rma.c \
        rma_deregister.c \
        rma_register.c \
        send.c \
        sendv.c \
        set_opt.c \
        strerror.c
