#
# Copyright (c) 2009-2010 Cisco Systems, Inc.  All rights reserved. 
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

# Main library
noinst_LTLIBRARIES = libcci_plugins_framework_core.la
headers = core.h
sources =

include base/Makefile.include

libcci_plugins_framework_core_la_SOURCES = $(headers) $(sources)

# Install the header files where they can be found
ccidir = $(includedir)/cci/plugins/core
nobase_cci_HEADERS = $(headers)
