#
# Copyright (c) 2009-2010 Cisco Systems, Inc.  All rights reserved. 
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

# Main library
noinst_LTLIBRARIES = libcci_plugins_framework_ctp.la
headers = ctp.h
sources =

include base/Makefile.include

libcci_plugins_framework_ctp_la_SOURCES = $(headers) $(sources)
libcci_plugins_framework_ctp_la_LDFLAGS = $(LIBLTDL)
