#
# Copyright © 2011 Inria.  All rights reserved.
# $COPYRIGHT$
#

AC_INIT(ccieth,
	0.0.1,
	[http://www.cci-forum.org],
	ccieth)
AC_CONFIG_SRCDIR(ccieth_main.c)
AC_CONFIG_LINKS(Kbuild:Kbuild)
AC_CONFIG_LINKS(ccieth_main.c:ccieth_main.c)
AC_CONFIG_LINKS(ccieth_recv.c:ccieth_recv.c)
AC_CONFIG_LINKS(ccieth_common.h:ccieth_common.h)
AC_CONFIG_LINKS(ccieth_wire.h:ccieth_wire.h)
AC_CONFIG_LINKS(ccieth_io.h:ccieth_io.h)
AC_OUTPUT(Makefile)
