#
# Copyright (c) 2010 Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
#

pkglib_LTLIBRARIES =      cci_core_gni.la

cci_core_gni_la_LDFLAGS = -module -avoid-version
cci_core_gni_la_SOURCES = core_gni.h        \
                          core_gni_module.c \
                          core_gni_api.c
