#
# Copyright (c) 2010-2011 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2010-2011 UT-Battelle, LLC.  All rights reserved.
# $COPYRIGHT$
#

pkglib_LTLIBRARIES = cci_core_sock.la

cci_core_sock_la_LDFLAGS = -module -avoid-version -lpthread
cci_core_sock_la_SOURCES = \
        core_sock.h \
        core_sock_module.c \
        core_sock_api.c
