#
# Copyright (c) 2010-2011 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2010-2011 UT-Battelle, LLC.  All rights reserved.
# $COPYRIGHT$
#

pkglib_LTLIBRARIES = cci_core_stcp.la

cci_core_stcp_la_LDFLAGS = -module -avoid-version -lpthread
cci_core_stcp_la_SOURCES = \
        core_stcp.h \
        core_stcp_module.c \
        core_stcp_api.c
