#
# Copyright (c) 2010 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2013 UT-Battelle, LLC.  All rights reserved.
# $COPYRIGHT$
#

pkglib_LTLIBRARIES = cci_ctp_e2e.la

cci_ctp_e2e_la_LDFLAGS = -module -avoid-version -lpthread
cci_ctp_e2e_la_SOURCES = \
        ctp_e2e.h \
        ctp_e2e_module.c \
        ctp_e2e_api.c
