#
# Copyright (c) 2010 Cisco Systems, Inc.  All rights reserved.
# Copyright © 2011 Inria.  All rights reserved.
# $COPYRIGHT$
#

pkglib_LTLIBRARIES = cci_core_eth.la

cci_core_eth_la_LDFLAGS = -module -avoid-version
cci_core_eth_la_SOURCES = \
        core_eth.h \
        core_eth_module.c \
        core_eth_api.c
