#
# Copyright (c) 2010-2011 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2010-2011 UT-Battelle, LLC.  All rights reserved.
# $COPYRIGHT$
#

pkglib_LTLIBRARIES = cci_ctp_sock.la

cci_ctp_sock_la_LDFLAGS = -module -avoid-version -lpthread
cci_ctp_sock_la_SOURCES = \
        ctp_sock.h \
        ctp_sock_module.c \
        ctp_sock_api.c
