#
# Copyright (c) 2010-2011 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2010-2011 UT-Battelle, LLC.  All rights reserved.
# $COPYRIGHT$
#

pkglib_LTLIBRARIES = cci_core_tcp.la

cci_core_tcp_la_LDFLAGS = -module -avoid-version -lpthread
cci_core_tcp_la_SOURCES = \
        core_tcp.h \
        core_tcp_module.c \
        core_tcp_api.c
