#
# Copyright (c) 2010-2011 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2010-2011 UT-Battelle, LLC.  All rights reserved.
# $COPYRIGHT$
#

pkglib_LTLIBRARIES = cci_ctp_tcp.la

cci_ctp_tcp_la_LDFLAGS = -module -avoid-version -lpthread
cci_ctp_tcp_la_SOURCES = \
        ctp_tcp.h \
        ctp_tcp_module.c \
        ctp_tcp_api.c
